# PyGameBoy

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  LICENSE.txt  README.md  checks.sh  pyproject.toml  setup.cfg  tox.ini
.github/: FUNDING.yml
.github/workflows/: tests.yml
docs/: README.md
docs/book/: README.md
gameboy/: __init__.py  __main__.py  cardridge.py  cartridge.py  constants.py  cpu.py  debug.py  emulator.py  exceptions.py  offset.py
src/gameboy/: __init__.py  __main__.py  cartridge.py  constants.py  debug.py  exceptions.py  offset.py
src/tests/: __init__.py  conftest.py  test_cartridge.py  test_debug.py  test_main.py
src/tests/roms/: invalid.gb
tests/: conftest.py  test_cardridge.py  test_cartridge.py  test_debug.py  test_main.py  utils.py
tests/roms/: README.md  corrupted-headers.gb
