[metadata]
name = gameboy
version = 0.0.1
author = Tiger-222
author-email = contact@tiger-222.fr
description = Game Boy emulator written from scratch in Python 3.
long_description = file: README.md
url = https://github.com/BoboTiG/PyGameBoy
keywords = gameboy, emulation, emulator, video-game
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3 :: Only
    Topic :: Games/Entertainment :: Arcade

[options]
zip-safe = False
include_package_data = True
packages = gameboy
setup_requires = pytest-runner
tests_require =
    pytest
    pytest-cov
    pytest-flake8

[options.package_data]
* = *.cfg, *.md, *.txt

[bdist_wheel]
universal = 1

[aliases]
test = pytest

[tool:pytest]
addopts = --showlocals --failed-first --no-print-logs --cov=gameboy --cov-report=html --flake8
