[metadata]
name = gameboy
version = 0.0.1
author = Tiger-222
author-email = contact@tiger-222.fr
description = Game Boy emulator written from scratch in Python 3.
long_description = file: README.md
url = https://github.com/BoboTiG/PyGameBoy
keywords = gameboy, emulation, emulator, video-game, retro
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only
    Topic :: Games/Entertainment :: Arcade

[options]
zip-safe = False
include_package_data = True
packages = gameboy
python_requires = >=3.6.5

[options.package_data]
* = *.cfg, *.md, *.txt

[bdist_wheel]
universal = 1

[aliases]
test = pytest

[flake8]
ignore =
    # E203 whitespace before ':', but E203 is not PEP 8 compliant
    E203
    # W503 line break before binary operator, but W503 is not PEP 8 compliant
    W503
max-line-length = 120
exclude =
    .git

[pydocstyle]
inherit = false
ignore = D105

[tool:pytest]
addopts =
    --showlocals
    --failed-first
    --no-print-logs
    --cov=gameboy
    --cov-report=html
